Fix groups menu on mobile viewports and load for users with no groups. #5086

--- a/src/app/modules/groups/memberships/memberships.component.ng.scss
+++ b/src/app/modules/groups/memberships/memberships.component.ng.scss
@@ -1,5 +1,9 @@
 @import 'defaults.scss';
 :host {
+  .m-pageLayout__pane--main {
+    width: 100%;
+  }
+
   .m-groupsMemberships {
     margin: 30px;
     @media screen and (max-width: $max-mobile) {
